update2.4.1新学期更新校历&下线毕业照
1.更新校历
2.下线毕业照
3.修复重置密码链接

--- a/pages/bookSearch/index.wxml
+++ b/pages/bookSearch/index.wxml
@@ -93,11 +93,11 @@
           </view>
         </view>
       </navigator>
-      <navigator url="/pages/graduatePhoto/sample">
+      <!-- <navigator url="/pages/graduatePhoto/sample">
         <view class="kb-open" style="color:red;">
           <text>生成毕业照，让毕业季不留遗憾🎓</text>
         </view>
-      </navigator>
+      </navigator> -->
     </view>
 
     <!-- Hi！寒暑假 -->
