--- a/pages/article/certificate.wxml
+++ b/pages/article/certificate.wxml
@@ -26,10 +26,14 @@
         <view class="card-content" wx:for="{{item.content}}" wx:for-index="subIndex" wx:for-item="subItem">
           <view class="desc-title">{{subItem.subtitle}}：</view>
           <view class="desc-content" data-url="{{subItem.url}}" bindtap="copyUrl"> - {{subItem.url}}</view>
+          <view wx:if="{{subItem.url=='http://cet.neea.edu.cn/cet/'}}" class="desc-content" data-url="{{subItem.url}}" bindtap="goToOtherWeapp"> - 直接前往查询</view>
         </view>
       </view>
     </block>
   </view>
+  <button open-type="contact" class="login-btn">
+    <text>我要补充</text>
+  </button>
   <button open-type="share" class="login-btn">
     <text>分享给同学</text>
   </button>
