--- a/pages/bookSearch/bookInfo/bookDetail.wxml
+++ b/pages/bookSearch/bookInfo/bookDetail.wxml
@@ -1,19 +1,20 @@
 <page>
   <view>
-    <view class="cover-container" wx:if="{{doubanStr.images.large}}">
-      <image src="{{doubanStr.images.large}}">
+    <view class="cover-container" wx:if="{{doubanStr.cover_url}}">
+      <image src="{{doubanStr.cover_url}}">
       </image>
     </view>
     <view class="book-meta">
       <view class="meta-info" wx:if="{{doubanStr.title}}" style='height:150px;'>
         <text class="book-title">{{doubanStr.title}}</text>
-        <text class="other-meta">作者：{{doubanStr.author[0]}}</text>
-        <text class="other-meta">出版社：{{doubanStr.publisher}}</text>
-        <text class="other-meta">出版日期：{{doubanStr.pubdate}}</text>
+        <text class="other-meta">{{doubanStr.abstract}}</text>
+        <text class="other-meta">作者：{{doubanStr.book_info['作者']}}{{doubanStr.book_info['译者']}}</text>
+        <text class="other-meta">出版社：{{doubanStr.book_info['出版社']}}</text>
+        <text class="other-meta">出版日期：{{doubanStr.book_info['出版年']}}</text>
       </view>
-      <view class="range" wx:if="{{doubanStr.rating.average}}">
-        <text class="score">{{doubanStr.rating.average}}</text>
-        <text class="viewers">{{doubanStr.rating.numRaters}}参与</text>
+      <view class="range" wx:if="{{doubanStr.rating.value}}">
+        <text class="score">{{doubanStr.rating.value}}</text>
+        <text class="viewers">{{doubanStr.rating.count}}参与</text>
       </view>
       <view class="sharerange" style='float:right;' wx:if="{{doubanStr.title}}">
         <button plain='true' open-type="share" type="primary" hover-class="other-button-hover">
@@ -58,13 +59,13 @@
         </view>
       </view>
     </view>
-    <view class="book-intro weui-panel raduis" wx:if="{{doubanStr.summary}}">
+    <view class="book-intro weui-panel raduis" wx:if="{{doubanStr.book_intro}}">
       <view class="intro-header">
         <text>简介</text>
       </view>
-      <text class="intro-content">{{doubanStr.summary}}</text>
+      <text class="intro-content">{{doubanStr.book_intro}}</text>
     </view>
-    <view class="book-intro" wx:if="{{doubanStr.suthor_intro}}">
+    <view class="book-intro" wx:if="{{doubanStr.author_intro}}">
       <view class="intro-header">
         <text>作者信息</text>
       </view>
